# happydogml

./: .flake8  .gitignore  Makefile  mypy.ini  pyproject.toml  t.ipynb
.github/workflows/: ci.yml
examples/: more_itertools.ipynb
src/happydogml/: __init__.py  dataset.py  hypothesis.py  logging.py
src/happydogml/utilities/: track.py
tests/: conftest.py  test_logging.py
tests/utilities/: test_track.py
