[tool.poetry]
name = "<project_name>"
version = "0.0.0"
description = "<description>"
authors = ["Happydog <happydog0930@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "<project_name>", from = "src" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["src", "tests"]
known_first_party = ["autonotellm"]