[tool.poetry]
name = "happydogml"
version = "0.0.0"
description = "The machine learning library build by Happydog."
authors = ["Happydog <happydog0930@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "happydogml", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^1.26.4"
pandas = "^2.2.2"
pytest-cov = "^5.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pytest = "^8.2.1"
pytest-mock = "^3.14.0"
flake8 = "^7.0.0"
mypy = "^1.10.0"
black = {extras = ["jupyter"], version = "^24.4.2"}
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["src", "tests"]
known_first_party = ["happydogml"]